[gd_scene load_steps=2 format=3 uid="uid://chud"]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1_hud"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hud")

[node name="LeftPanel" type="Panel" parent="."]
offset_right = 200.0
offset_bottom = 720.0

[node name="VBox" type="VBoxContainer" parent="LeftPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="TowersLabel" type="Label" parent="LeftPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "TOWERS"
horizontal_alignment = 1

[node name="TowerGrid" type="GridContainer" parent="LeftPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3
columns = 2
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8

[node name="RightPanel" type="Panel" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_bottom = 720.0
grow_horizontal = 0

[node name="VBox" type="VBoxContainer" parent="RightPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="CurrencyLabel" type="Label" parent="RightPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "$ 200"

[node name="LivesLabel" type="Label" parent="RightPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "â™¥ 20"

[node name="WaveLabel" type="Label" parent="RightPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Wave 0/10"

[node name="Spacer" type="Control" parent="RightPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="StartWaveButton" type="Button" parent="RightPanel/VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Start Wave"

[node name="GameOverPanel" type="Panel" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -50.0
offset_right = 150.0
offset_bottom = 50.0

[node name="Label" type="Label" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -20.0
offset_right = 100.0
offset_bottom = 20.0
theme_override_font_sizes/font_size = 32
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="RightPanel/VBox/StartWaveButton" to="." method="_on_start_wave_button_pressed"]
